web/src/scss/index.scss
@use 'foundation/colors' as c;
@use "foundation/breakpoints" as b;

.introBranding {
  display: grid;
  gap: 2.2rem;
  grid-template-columns: auto auto;
  @include b.mq(lg) {
    width: 100vw;
    padding: 0 6% 0 6%;
  }
}

.introLogo {
  width: 18.7rem;
  @include b.mq(sm) {
    width: 12.5rem;
  }
}

.introLogoContainer {
  padding-top: 3.4rem;
  @include b.mq(lg) {
    justify-self: right;
  }
  @include b.mq(sm) {
    padding-top: 2.7rem;
  }
}

.brand {
  font-family: "Halis";
  font-size: 6rem;
  font-weight: 500;
  line-height: 0.96;
  color: c.$grey-750;
  &:first-child{
    padding-top: 0.5em;
  }
  @include b.mq(sm) {
    font-size: 4rem;
  }
}

.introText {
  position: relative;
  padding-top: 8.6rem;
  @include b.mq(lg) {
    max-width: 70rem;
    width: 88%;
    margin: 0 auto 0;
    padding-top: 0;
  }
  @include b.mq(md) {
    margin: -4rem 6% 0 6%;
    padding-top: 0;
  }
  @include b.mq(sm) {
    margin: -4rem 6% 0 6%;
    padding-top: 0;
  }
}

.sideImageContainer {
  position: absolute;
  bottom: 4.75rem;
  left: 0rem;
  font-size: 1.6rem;
  line-height: 0.8;
  text-align: right;
  @include b.mq(lg) {
    position: relative;
    margin: 6rem auto 0 6%;
  }
  @include b.mq(md) {
    margin: 4rem auto 0;
  }
  @include b.mq(sm) {
    font-size: 1.2rem;
  }
}

.sideImageContainer div {
  @include b.mq(sm) {
    margin-right: 6%;
  }
}

.sideImage {
  height: 31.7rem;
  width: auto;
  @include b.mq(sm) {
    height: auto;
    width: 100vw;
  }
}

.sectionContainer {
  position: relative;
  padding-top: 12.5rem;
  margin: auto;
  max-width: 108rem;
  @include b.mq(sm) {
    padding-top: 9rem;
  }
}

.sectionHero {
  height: 45rem;
  max-width: 108rem;
  width: 100vw;
  margin: auto;
  z-index: -5;
  @include b.mq(sm) {
    height: 30rem;
  }
}

.sectionHeroCaption {
  position: absolute;
  top: 8.6rem;
  right: 4rem;
  @include b.mq(sm) {
    position: relative;
    top: 0;
    right: 0;
    margin-right: 6%;
  }
}

.sectionContent {
  display: flex;
  margin: 0 0 0 5.5rem;
  z-index: 4;
  @include b.mq(md) {
    margin: 0;
  }
}

.sectionText {
  margin: 0 0 3rem 6rem;
  @media (max-width: 1080px) {
    margin: 0 5.6rem 6rem 6rem;
  }
  @include b.mq(md) {
    margin: 0 auto 8rem;
    width: 88%;
  }
  @include b.mq(sm) {
    margin: 0 auto;
    width: 88%;
  }
}

.sectionInsetImage {
  @include b.mq(md) {
    display: none;
  }
}

.sectionInset {
  margin-top: 5rem;
  width: 34rem;
  height: 51rem;
  @include b.mq(lg) {
    width: 22.5rem;
    height: 38.25rem;
  }
}

.sectionTitleContainer {
  display: block;
  margin: 4rem auto 6.6rem;
  text-align: right;
  @include b.mq(sm) {
    text-align: left;
    margin: 0rem auto 3rem;
  }
  div {
    display: inline-block;
    background: c.$grey-100;
    padding: 1.3rem 3.7rem 1.7rem 3.7rem;
    @include b.mq(sm) {
      display: block;
      padding: 1.3rem 6% 1.7rem 6%;
    }
  }
  h2 {
    color: c.$grey-650;
    font-size: 5rem;
    text-transform: uppercase;
    @include b.mq(sm) {
      font-size: 4em;
      line-height: 1.1;
    }
  }
  h3 {
    color: c.$grey-500;
  }
}

.introduction {
  display: grid;
  grid-template-columns: 1fr 2fr;
  gap: 9.4rem;
  padding-bottom: 6rem;
  @include b.mq(lg) {
    grid-template-columns: 1fr;
    padding-bottom: 0rem;
    margin-bottom: -6rem;
  }
  @include b.mq(md) {
    grid-template-columns: 1fr;
    padding-bottom: 0rem;
    margin-bottom: -6rem;
  }
  @include b.mq(sm) {
    grid-template-columns: 1fr;
    padding-bottom: 0rem;
    margin-bottom: -6rem;
  }
}

%cta {
  position: relative;
  color: c.$grey-450;
  line-height: 1.1;
  transition: color 0.25s;
  span {
    background: c.$grey-000;
    padding: 0 0 0 2rem;
    @include b.mq(md) {
      font-size: 5rem;
    }
    @include b.mq(sm) {
      background: transparent;
      margin-right: auto;
      font-size: 3.2rem;
    }
  }
  &::after {
    content: url('data:image/svg+xml,%3Csvg height="3.5em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"%3E%3Cpath d="M224 273L88 409c-9 9-24 9-34 0l-22-23c-10-9-10-24 0-34l96-96-96-96c-10-10-10-25 0-34l22-23c10-9 25-9 34 0l136 136c10 9 10 25 0 34zm192-34L280 103c-9-9-24-9-34 0l-22 23c-10 9-10 24 0 33l96 97-96 96c-10 10-10 25 0 34l22 23c10 9 25 9 34 0l136-136c10-9 10-25 0-34z" fill="%238c8c8c"/%3E%3C/svg%3E');
    position: absolute;
    transition: transform 0.25s;
    height: 3.5em;
    pointer-events: none;
    @include b.mq(md) {
      content: url('data:image/svg+xml,%3Csvg height="3em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"%3E%3Cpath d="M224 273L88 409c-9 9-24 9-34 0l-22-23c-10-9-10-24 0-34l96-96-96-96c-10-10-10-25 0-34l22-23c10-9 25-9 34 0l136 136c10 9 10 25 0 34zm192-34L280 103c-9-9-24-9-34 0l-22 23c-10 9-10 24 0 33l96 97-96 96c-10 10-10 25 0 34l22 23c10 9 25 9 34 0l136-136c10-9 10-25 0-34z" fill="%238c8c8c"/%3E%3C/svg%3E');
      top: 0.6rem;
      height: 3em;
    }
    @include b.mq(sm) {
      content: url('data:image/svg+xml,%3Csvg height="2em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"%3E%3Cpath d="M224 273L88 409c-9 9-24 9-34 0l-22-23c-10-9-10-24 0-34l96-96-96-96c-10-10-10-25 0-34l22-23c10-9 25-9 34 0l136 136c10 9 10 25 0 34zm192-34L280 103c-9-9-24-9-34 0l-22 23c-10 9-10 24 0 33l96 97-96 96c-10 10-10 25 0 34l22 23c10 9 25 9 34 0l136-136c10-9 10-25 0-34z" fill="%238c8c8c"/%3E%3C/svg%3E');
      top: 0.3rem;
      height: 2em;
    }
  }
  &:hover,
  &:active {
    color: c.$grey-500;
    transition: color 0.25s;
    &::after {
      transform: translateX(0.7rem);
      transition: transform 0.25s;
    }
  }
}

.introCta {
  @extend %cta;
  margin-top: 19.3rem;
  margin-left: auto;
  text-align: right;
  padding-right: 5.4rem;
  @include b.mq(lg) {
    margin-top: 7rem;
  }
  @include b.mq(md) {
    margin-top: 7rem;
  }
  @include b.mq(sm) {
    margin-top: 5rem;
    padding-right: 0;
    margin-right: 6%;
  }
}

.sectionCta {
  @extend %cta;
  margin-top: -3rem;
  margin-left: auto;
  text-align: right;
  padding-right: 2rem;
  @include b.mq(md) {
    padding-right: 0rem;
  }
  @include b.mq(sm) {
    background: transparent;
    margin-top: 2rem;
    padding-right: 2rem;
    margin-right: 6%;
  }
}

%ctaHr {
  position: absolute;
  bottom: 1.2rem;
  height: 0.14rem;
  background: c.$grey-300;
  z-index: -1;
  @include b.mq(sm) {
    display: none;
  }
}

.introCtaHr {
  @extend %ctaHr;
  left: -13rem;
  width: 55rem;
}

.sectionCtaHr {
  @extend %ctaHr;
  width: 75%;
  margin: auto;
}

.sectionCtaContainer {
  margin-right: 3.4rem;
  @media (max-width: 1080px) {
    margin-right: 9rem;
  }
  @include b.mq(sm) {
    margin-right: 0;
  }
}

